# side-builder

./: .gitignore  README.md  publish.bat  pyproject.toml  selenium_ide_ai_helper.py  upload.bat  verify_pw_sync_recording.bat  verify_pw_sync_recording.sh  verify_sel_sync_recording.bat  verify_sel_sync_recording.sh  verify_uc_sync_recording.bat  verify_uc_sync_recording.sh
examples/demoblaze/login-logout/: README.md  login_logout_pw_async.py  login_logout_pw_sync.py  login_logout_sel_sync.py
examples/demoblaze/sign-up/: README.md  signup_logout_pw_async.py  signup_logout_pw_sync.py  signup_logout_sel_sync.py
examples/demoqa/elements-text-box/: text_box_pw_async.py  text_box_pw_sync.py  text_box_sel_sync.py
examples/resize-screen/: README.md  resize_screen_pw_async.py  resize_screen_pw_sync.py  resize_screen_sel_sync.py
examples/saucedemo/login-cart-order-logout/: README.md  login_cart_order_logout_async.py  login_cart_order_logout_pw_async.py  login_cart_order_logout_pw_sync.py  login_cart_order_logout_sel_sync.py  login_cart_order_logout_sync.py
examples/saucedemo/login-logout/: README.md  login_logout_async.py  login_logout_pw_async.py  login_logout_pw_sync.py  login_logout_sel_sync.py  login_logout_seluc_sync.py  login_logout_sync.py
examples/the-internet/form-authentication/: README.md  form_auth_pw_async.py  form_auth_pw_sync.py  form_auth_sel_sync.py
examples/uitestingplayground/text-input/: README.md  text_input_pw_async.py  (+2 more)
regression_tests/: test_playwright.py  test_selenium.py  test_uc.py
src/side_player/: __init__.py  builder.py
(+43 files in other folders)
